@@ -1,13 +1,16 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2005-2005 Gentoo Technologies, Inc.
 
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.399 2005/09/30 19:52:47 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.400 2005/09/30 20:33:29 agaffney Exp $
 
 *GLI-0.2 (4 Aug 2005)
 
   30 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/client/gliclient.py:
   initial commit
+  pass MAC to XMLRPC functions
+  src/net/server/GLIServerProfile.py:
+  rename GLIClientsProfiles to GLIServerProfile
 
   29 Sep 2005; Andrew Gaffney <agaffney@gentoo.org>
   src/net/server/gliserv.py:
